# tx2_decode

./: Makefile  README.md
 summary/: brief_summary.docx  test_report.docx
 summary/tegra_multimedia_decode/: video_decode  video_decode.h  video_decode_main.cpp
 summary/tx2_ffmpeg_decoder/: decode_video.cpp  test.cpp
 summary/tx2_ffmpeg_decoder/backup/ffmpeg_opencv1/: main.cpp  test
 summary/tx2_ffmpeg_mp4toh264/: Makefile  main.cpp
 summary/tx2_gstreamer_decoder/: gst_decode.cpp  gst_decode.h
tx2_ffmpeg_opencv/: Makefile  decode_video.h
tx2_ffmpeg_opencv/backup/ffmpeg_opencv1/: CMakeLists.txt
tx2_gstreamer_decoder/: Makefile  main.cpp  test
tx2_gstreamer_decoder/backup/: main.cpp  main1.cpp  run.sh
